# xray-lite

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
docs/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/api/src/xray_lite/: client.rs.html  context.rs.html  epoch.rs.html  error.rs.html  header.rs.html  hexbytes.rs.html  lambda.rs.html  lib.rs.html  namespace.rs.html  segment.rs.html  segment_id.rs.html  session.rs.html  trace_id.rs.html
docs/api/src/xray_lite_aws_sdk/: lib.rs.html
docs/api/trait.impl/core/clone/: trait.Clone.js
docs/api/trait.impl/core/cmp/: trait.PartialEq.js
docs/api/trait.impl/core/convert/: trait.From.js
docs/api/trait.impl/core/default/: trait.Default.js
docs/api/trait.impl/core/error/: trait.Error.js
docs/api/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/api/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/api/trait.impl/core/ops/drop/: trait.Drop.js
docs/api/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/trait.impl/core/str/traits/: trait.FromStr.js
docs/api/trait.impl/serde/de/: trait.Deserialize.js
docs/api/trait.impl/serde/ser/: trait.Serialize.js
docs/api/trait.impl/xray_lite/context/: trait.IntoInfallibleContext.js
docs/api/trait.impl/xray_lite_aws_sdk/: trait.ContextExt.js
docs/api/type.impl/core/result/: enum.Result.js
docs/api/xray_lite/: all.html  enum.Annotation.html  enum.Cause.html  enum.Error.html  enum.InfallibleClient.html  enum.InfallibleContext.html  enum.SegmentId.html  enum.SubsegmentSession.html  enum.TraceId.html  index.html  sidebar-items.js  struct.Aws.html  struct.AwsNamespace.html  struct.AwsOperation.html  struct.Client.html  struct.CustomNamespace.html  struct.DaemonClient.html  struct.Ec2.html  struct.Ecs.html  struct.ElasticBeanstalk.html  struct.Exception.html  struct.Header.html  struct.Http.html  struct.RemoteNamespace.html  struct.Request.html  struct.Response.html  struct.Seconds.html  struct.Segment.html  struct.Service.html  struct.Sql.html  struct.StackFrame.html  struct.Subsegment.html  struct.SubsegmentContext.html  struct.XRay.html  trait.Client.html  trait.Context.html  trait.IntoInfallibleClient.html  trait.IntoInfallibleContext.html  trait.Namespace.html  type.Result.html
docs/api/xray_lite/client/: enum.InfallibleClient.html  struct.Client.html  struct.DaemonClient.html  trait.Client.html  trait.IntoInfallibleClient.html
docs/api/xray_lite/context/: enum.InfallibleContext.html  struct.SubsegmentContext.html  trait.Context.html  trait.IntoInfallibleContext.html
docs/api/xray_lite/epoch/: struct.Seconds.html
docs/api/xray_lite/error/: enum.Error.html  type.Result.html
docs/api/xray_lite/header/: struct.Header.html
docs/api/xray_lite/namespace/: struct.AwsNamespace.html  struct.CustomNamespace.html  struct.RemoteNamespace.html  trait.Namespace.html
docs/api/xray_lite/segment/: enum.Annotation.html  enum.Cause.html  struct.Aws.html  struct.AwsOperation.html  struct.Ec2.html  struct.Ecs.html  struct.ElasticBeanstalk.html  struct.Exception.html  struct.Http.html  struct.Request.html  struct.Response.html  struct.Segment.html  struct.Service.html  struct.Sql.html  struct.StackFrame.html  struct.Subsegment.html  struct.XRay.html
docs/api/xray_lite/segment_id/: enum.SegmentId.html
docs/api/xray_lite/session/: enum.SubsegmentSession.html
docs/api/xray_lite/trace_id/: enum.TraceId.html
docs/api/xray_lite_aws_sdk/: all.html  index.html  trait.ContextExt.html
xray/: Cargo.toml
xray-lite/: Cargo.toml
xray-lite-aws-sdk/: Cargo.toml  README.md
xray-lite-aws-sdk/src/: classify.rs  lib.rs
xray-lite/benches/: bench_ids.rs
xray-lite/examples/: print.rs
xray-lite/src/: client.rs  context.rs  epoch.rs  error.rs  header.rs  hexbytes.rs  lambda.rs  lib.rs  namespace.rs  segment.rs  session.rs
xray/examples/: print.rs
xray/src/: error.rs  header.rs  lib.rs  segment.rs
