[package]
name = "xray-lite-aws-sdk"
version = "0.0.4"
atuthors = ["Kikuo Emoto <kemoto@codemonger.io>"]
edition = "2021"
description = "xray-lite extension for AWS SDK for Rust"
license = "MIT"
keywords = ["aws", "x-ray", "aws-sdk", "tracing"]
readme = "./README.md"
documentation = "https://docs.rs/xray-lite-aws-sdk"
homepage = "https://github.com/codemonger-io/xray-lite/tree/main/xray-lite-aws-sdk"
repository = "https://github.com/codemonger-io/xray-lite"
categories = ["development-tools::debugging", "development-tools::profiling"]

[lib]
name = "xray_lite_aws_sdk"

[dependencies]
aws-smithy-runtime-api = { version = "1.1", features = ["client"] }
aws-smithy-types = "1.1"
aws-types = "1.1"
xray-lite = { path = "../xray-lite", version = "0.0.9" }

[dev-dependencies]
aws-config = "1.1.8"
aws-sdk-s3 = "1.18.0"
