[package]
name = "xray-lite"
version = "0.0.7"
authors = ["softprops <d.tangren@gmail.com>", "Kikuo Emoto <kemoto@codemonger.io>"]
edition = "2021"
description = "AWS X-Ray daemon client for Rust"
license = "MIT"
keywords = ["aws", "x-ray", "lambda", "tracing", "distributed-tracing"]
readme = "../README.md"
documentation = "https://docs.rs/xray-lite"
homepage = "https://github.com/codemonger-io/xray-lite"
repository = "https://github.com/codemonger-io/xray-lite"

[lib]
name = "xray_lite"

[dependencies]
thiserror = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
