[package]
name = "xray"
version = "0.0.2"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "AWS X-Ray daemon client for Rust"
license = "MIT"
keywords = ["aws", "x-ray", "tracing", "distributed-tracing"]
readme = "../README.md"
documentation = "https://docs.rs/xray"
homepage = "https://github.com/softprops/xray"
repository = "https://github.com/softprops/xray"

[dependencies]
thiserror = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
